# kq-fork

./: .clang-format  .dir-locals.el  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  CMakeSettings.json  ChangeLog  FindAllegro.cmake  INSTALL_msvc.md  INSTALL_msvc.txt  Info-KQ_osx.plist  KQ.sln  KQ.vcxproj  KQ.vcxproj.filters  Makefile.am  README  README.md  README.old  README_MINGW.txt  acinclude.m4  blurb  changes.txt  config.cmake.h  configure.ac  fix.bat  mrproper.sh  objc-detect.m4  vcpkg.json
KQ-Linux.kdevelop/: Doxyfile  KQ.kdevelop  KQ.kdevelop.pcs
KQ-osx.pbproj/: project.pbxproj
KQ-osx.xcodeproj/: project.pbxproj
Mac/: Info.plist  KQ-icon.icns  README.rtf
data/: allstat.mon  hero.kq  resabil.mon  starting.xml  tileset.kq
debian/: README  kq.6  kq.xpm
include/: anim_sequence.h  animation.h  bounds.h  combat.h  compat.h  console.h  constants.h  credits.h  disk.h  draw.h  effects.h  enemyc.h  entity.h  enums.h  eqpmenu.h  eskill.h  fade.h  fighter.h  gettext.h  gfx.h  heroc.h  hskill.h  imgcache.h  input.h  intrface.h  inventory.h  itemdefs.h  itemmenu.h  kq.h  kqsnd.h  magic.h  maps.h  markers.h  masmenu.h  menu.h  movement.h  mpcx.h  music.h  platform.h  player.h  (+19 more)
libs/TmxParser/: Tmx.h  TmxEllipse.cpp  TmxEllipse.h  TmxImage.cpp  TmxImage.h  TmxImageLayer.cpp  TmxImageLayer.h  TmxLayer.cpp  TmxLayer.h  TmxMap.cpp  TmxMap.h  TmxMapTile.h  TmxObject.cpp  TmxObject.h  TmxObjectGroup.cpp  TmxObjectGroup.h  TmxPolygon.cpp  TmxPolyline.cpp  TmxPropertySet.cpp  TmxPropertySet.h  TmxTile.cpp  TmxTile.h  TmxTileset.cpp  TmxTileset.h  TmxUtil.cpp  TmxUtil.h
maps/: CMakeCache.txt  CMakeLists.txt  Changes.txt  Incave.pcx  Makefile  Misc.pcx  Obstacles.xcf  bridge.map  bridge.tmx  bridge2.map  bridge2.tmx  camp.map  camp.tmx  castle.pcx  castle.tsx  cave.tsx  cave1.map  cave1.tmx  cave2.map  cave2.tmx  cave3a.map  cave3a.tmx  cave3b.map  cave3b.tmx  cave4.map  cave4.tmx  cave5.map  cave5.tmx  cave6a.map  cave6a.tmx  cave6b.map  cave6b.tmx  cave7.tmx  cave8.tmx  cave9.tmx  cmake_install.cmake  coliseum.map  coliseum.tmx  compile_commands.json  cult.map  (+112 more)
maps/nbproject/: configurations.xml  project.xml
maps/nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml  private.xml
mkfiles/: makefile.all  makefile.be  makefile.cfg  makefile.dj  makefile.lnx  makefile.mgw  makefile.osx  makefile.un  makefile.unx  makefile.vc
music/: aa_arofl.xm  comeback.mod  dag_4.xm  enfero.xm  eranasp.mod  exp.s3m  hm.s3m  infanita.mod  into61.s3m  oxford.s3m  rend5.s3m  toroia.s3m  town.mod  walk.s3m  waterw.xm
other/: battles.csv  codeformatting.txt  effects.csv  encount.csv  hero.txt  indent.pro  items.csv  kq2h.pl  luaxgettext.pl  res-skel.1.c  res-skel.2.c  res-skel.3.c  res-skel.4.c  res-skel.5.c  res-skel.6.c  rescmp.c  spells.csv  tileset.txt
po/: Makevars  POTFILES.in  POTFILES.lua  Rules-Lua  de.po  es.po  kq.pot
projects/devcpp/: KQ.dev  Makefile.win  README  lua.mak
projects/mingw-studio/: README  kq.msp
release/: kq.nsi  linux-bin-README  linux-bin-install.sh  make-release.sh  win32-bin-COPYING  win32-bin-README
saves/: sgupdate.c
scripts/: Makefile.am  allsc.txt  bridge.lua  bridge2.lua  camp.lua  cave1.lua  cave2.lua  cave3a.lua  cave3b.lua  cave4.lua  cave5.lua  cave6a.lua  cave6b.lua  cave7.lua  cave8.lua  cave9.lua  cheat.lua  coliseum.lua  comp.bat  compall.sh  cult.lua  dville.lua  estate.lua  esteria.lua  fort.lua  global.lua  goblin.lua  grotto.lua  grotto2.lua  guild.lua  init.lua  main.lua  manor.lua  pass.lua  pass2.lua  preall.sh  prep.pl  prison.lua  shrine.lua  shrine2.lua  (+17 more)
src/: anim_sequence.cpp  animation.cpp  beos.c  bounds.c  bounds.cpp  combat.c  combat.cpp  console.c  console.cpp  credits.c  credits.cpp  disk.c  disk.cpp  dos.c  draw.c  draw.cpp  effects.c  effects.cpp  enemyc.c  enemyc.cpp  entity.c  entity.cpp  enums.cpp  eqpmenu.c  eqpmenu.cpp  eskill.c  eskill.cpp  fade.c  fade.cpp  fighter.cpp  gfx.cpp  heroc.c  heroc.cpp  hskill.c  hskill.cpp  imgcache.cpp  input.cpp  intrface.c  intrface.cpp  inventory.cpp  (+47 more)
src/misc/: runner.c
